--- a/frontend-secretaire/public/manifest.json
+++ b/frontend-secretaire/public/manifest.json
@@ -1,19 +1,8 @@
 {
   "short_name": "DanGE Secrétaire",
   "name": "Transport DanGE - Secrétaire",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
+  "icons":  [],
+  "start_url":  ".",
   "display": "standalone",
   "theme_color": "#4CAF50",
   "background_color": "#ffffff"
