--- a/frontend-chauffeur/.env
+++ b/frontend-chauffeur/.env
@@ -1,11 +1,14 @@
-# Backend API URL (Render)
-REACT_APP_API_URL=https://taxi-transportdange-backend.onrender.com/api
+# API Backend
+REACT_APP_API_URL=http://localhost:5000/api
 
-# Firebase Configuration
+# Firebase Configuration (remplacez par VOS valeurs)
 REACT_APP_FIREBASE_API_KEY=AIzaSyCe08U4nEDIK9COhMUAWmz8YuxoCluZKfY
-REACT_APP_FIREBASE_AUTH_DOMAIN=transport-dange. firebaseapp.com
+REACT_APP_FIREBASE_AUTH_DOMAIN=transport-dange.firebaseapp.com
 REACT_APP_FIREBASE_PROJECT_ID=transport-dange
-REACT_APP_FIREBASE_STORAGE_BUCKET=transport-dange.firebasestorage. app
-REACT_APP_FIREBASE_MESSAGING_SENDER_ID=86580303208
-REACT_APP_FIREBASE_APP_ID=1:86580303208:web:7bfb08e4462a3da6dbf2dd
-REACT_APP_FIREBASE_VAPID_KEY=2gBxat5nqryMatGNMYR-_srC8t2rZI0_eIUFFEk-9yI
+REACT_APP_FIREBASE_STORAGE_BUCKET=transport-dange.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=123456789
+REACT_APP_FIREBASE_APP_ID=1:123456789:web:abc123
+REACT_APP_FIREBASE_VAPID_KEY=BJvRYRHleyGZlFFSlk5dSy1XlJn5QQKD_1KlT10haTm6vsjTVzkfZXePJqS6kGbe2vzOUgNPO6xsk712YmcluL8
+
+# Socket.IO
+REACT_APP_SOCKET_URL=http://localhost:5000
