--- a/frontend-secretaire/package.json
+++ b/frontend-secretaire/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.2",
     "socket.io-client": "^4.6.1",
     "date-fns": "^2.30.0",
+    "react-big-calendar": "^1.8.5",
     "react-router-dom": "^6.20.1"
   },
   "scripts": {
