--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.11.0",
     "socket.io-client": "^4.8.3"
   },
