Add Leaflet dependencies for geolocation

--- a/frontend-secretaire/package.json
+++ b/frontend-secretaire/package.json
@@ -15,17 +15,21 @@
     "socket.io-client": "^4.6.1",
     "date-fns": "^2.30.0",
     "react-big-calendar": "^1.8.5",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean-install": "rm -rf node_modules && npm install"
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -39,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "author": "Votre nom",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/votre-dépôt"
   }
 }
