--- a/frontend-chauffeur/package.json
+++ b/frontend-chauffeur/package.json
@@ -44,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0"
+  
   }
 }
