--- a/frontend-secretaire/package.json
+++ b/frontend-secretaire/package.json
@@ -48,5 +48,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/votre-dépôt"
+  },
+  "overrides": {
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0"
   }
 }
