--- a/frontend-chauffeur/package.json
+++ b/frontend-chauffeur/package.json
@@ -47,7 +47,14 @@
   },
   "overrides": {
     "ajv": "^8.12.0",
-    "ajv-keywords": "^5.1.0"
-  
+    "ajv-keywords": "^5.1.0",
+    "schema-utils": {
+      "ajv": "^8.12.0",
+      "ajv-keywords": "^5.1.0"
+    }
+  },
+  "resolutions": {
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0"
   }
 }
