--- a/frontend-chauffeur/package.json
+++ b/frontend-chauffeur/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "transport-dange-chauffeur",
+  "name": "transport-dange-secretaire",
   "version": "1.0.0",
-  "description": "PWA chauffeur pour Transport DanGE - Application de dispatch taxi",
+  "description": "Frontend secrétaire pour Transport DanGE - Application de dispatch taxi",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
@@ -14,23 +14,22 @@
     "axios": "^1.6.2",
     "socket.io-client": "^4.6.1",
     "date-fns": "^2.30.0",
+    "react-big-calendar": "^1.8.5",
     "react-router-dom": "^6.20.1",
-    "firebase": "^10.7.1",
-    "workbox-core": "^7.0.0",
-    "workbox-expiration": "^7.0.0",
-    "workbox-precaching": "^7.0.0",
-    "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0"
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "clean-install": "rm -rf node_modules && npm install"
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -45,16 +44,9 @@
       "last 1 safari version"
     ]
   },
-  "overrides": {
-    "ajv": "^8.12.0",
-    "ajv-keywords": "^5.1.0",
-    "schema-utils": {
-      "ajv": "^8.12.0",
-      "ajv-keywords": "^5.1.0"
-    }
-  },
-  "resolutions": {
-    "ajv": "8.12.0",
-    "ajv-keywords": "5.1.0"
+  "author": "Votre nom",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/votre-dépôt"
   }
 }
